--- a/register.html
+++ b/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,7 +18,37 @@
         </nav>
     </header>
     <main>
-        <h2>Register</h2>
+        <h2>Register a new pet</h2>
+        <p>Pet in the salon = <span id="numberOfPets"></span></p>
+        <!-- create a form with inputs: name,age,gender, breed, service (dropdown)-->
+        <div class="container">
+            <div class="mb-3">
+                <label class="form-label">Name:</label>
+                <input type="text" class="form-control" id="txtName">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Age:</label>
+                <input type="number" class="form-control" id="txtAge">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Gender:</label>
+                <input type="text" class="form-control" id="txtGender">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Breed:</label>
+                <input type="text" class="form-control" id="txtBreed">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Service:</label>
+                <select class="form-control" id="txtService"> 
+                    <option value="" disabled selected>-- Select an option --</option>
+                    <option value="grooming">Grooming</option>
+                    <option value="nails">Nails cut</option>
+                    <option value="vaccine">Vaccines</option>
+                </select>
+            </div>
+            <button class="btn btn-light" onclick="register();">Register</button>
+        </div>
     </main>
     <footer id="footer">
         
