displaying pets in the html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis fugiat, quisquam ipsa quasi facilis, minima tenetur quas aspernatur dolor nostrum, reprehenderit perferendis voluptas at enim dolore est temporibus corporis? In hic ex libero nihil numquam ab inventore omnis tenetur. Illo incidunt commodi ratione iure error fugiat totam consequatur eius consequuntur perspiciatis architecto debitis quos, est possimus? Nobis, rerum? Voluptate quidem ullam molestiae, corrupti optio magnam necessitatibus et temporibus ipsam tempora voluptatum odio enim soluta ad rem hic officia quasi amet nam rerum explicabo. Sequi aliquam perferendis aut repudiandae, ab incidunt doloribus vitae a quia non explicabo porro nemo quibusdam. Exercitationem fugit repudiandae maiores repellendus iusto, quo aut molestiae sapiente debitis aliquam. Inventore sapiente, officia aperiam itaque placeat sit consequuntur vel!</p>
         </div>
     </main>
-    <footer>
+    <footer id="footer">
         
     </footer>
+    <script src="scripts/displayFooter.js"></script>
 </body>
 </html>
