--- a/register.html
+++ b/register.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/register.css">
+    <link rel="stylesheet" href="styles/displayPets.css">
     <title>Document</title>
 </head>
 <body>
@@ -49,10 +51,17 @@
             </div>
             <button class="btn btn-light" onclick="register();">Register</button>
         </div>
+
+        <div id="pets" class="pets">
+            <!-- all the pets go here-->
+        </div>
     </main>
     <footer id="footer">
         
     </footer>
+    <script src="scripts/displayFooter.js"></script>
+    
+    <script src="scripts/displayPets.js"></script>
     <script src="scripts/register.js"></script>
 </body>
 </html>
